<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_bill"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#343434"
    tools:context=".Invoice.NewBillActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/item_tv"
                android:textColor="#969696"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/new_item_value"
                android:hint="@string/item_hint"
                android:layout_marginTop="10dp"
                android:textColor="#F5EDDC"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/final_price_tv"
                android:textColor="#969696"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/new_final_price_value"
                android:hint="@string/final_price_hint"
                android:inputType="number"
                android:layout_marginTop="10dp"
                android:textColor="#F5EDDC"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"

                android:text="@string/quantity_tv"
                android:textColor="#969696"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/new_quantity_value"
                android:hint="@string/quantity_tv"
                android:inputType="number"
                android:maxLength="3"
                android:layout_marginTop="10dp"
                android:textColor="#F5EDDC"
                android:maxLines="1"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"

                android:text="@string/tax_slab_tv"
                android:textColor="#969696"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/tax_slab_spinner"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:backgroundTint="#F5EDDC"
                android:layout_marginTop="10dp"
                android:textColor="#F5EDDC"
                android:outlineAmbientShadowColor="#F5EDDC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="addToBill"
                android:id="@+id/add_to_bill_btn"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="30dp"
                android:text="@string/add_to_bill_btn_label"

                android:background="@drawable/round"
                android:backgroundTint="#CEE5D0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:onClick="finishAddingItems"
                android:id="@+id/finish_btn"
                android:layout_marginBottom="10dp"
                android:text="@string/finish_btn_label"
                android:background="@drawable/round"
                android:backgroundTint="@color/purple_500"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/done_edit_item_btn"
                android:layout_marginBottom="5dp"
                android:text="@string/done_edit_item_btn_label"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
