<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:id="@+id/drawer_layout"
    tools:context=".Invoice.SetupPasswordActivity"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#343434"
    android:id="@+id/activity_setup_password"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        app:titleTextColor="#B3A0A0"
        android:elevation="4dp"
        android:background="#343434"

        tools:ignore="MissingConstraints" />
    <TextView
        android:text="@string/setup_business_label"
        android:layout_width="match_parent"
        android:textColor="#969696"
        android:textSize="15dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/setup_business_value"
        android:hint="@string/setup_business_hint"
        android:layout_marginTop="10dp"
        android:textColor="#F5EDDC"
        android:background="@drawable/round2"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <TextView
        android:text="@string/setup_business_address_label"
        android:layout_width="match_parent"
        android:textColor="#969696"
        android:layout_marginTop="20dp"
        android:textSize="15dp"
        android:layout_height="wrap_content" />
    <EditText
        android:background="@drawable/round2"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#F5EDDC"

        android:id="@+id/setup_business_address_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp" />

    <TextView
        android:text="@string/setup_business_contact_label"
        android:textColor="#969696"
        android:layout_marginTop="20dp"

        android:textSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:background="@drawable/round2"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#F5EDDC"

        android:id="@+id/setup_business_contact_value"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp" />

    <TextView
        android:text="@string/setup_new_password"
        android:textColor="#969696"
        android:textSize="15dp"
        android:layout_marginTop="20dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:background="@drawable/round2"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="#F5EDDC"

        android:id="@+id/setup_new_password_value"
        android:hint="@string/setup_new_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:text="@string/setup_confirm_password"
        android:textColor="#969696"
        android:textSize="15dp"
        android:layout_marginTop="20dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/setup_confirm_password_value"
        android:hint="@string/setup_confirm_password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:textColor="#F5EDDC"

        android:background="@drawable/round2"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <Button
        android:text="Setup"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:background="@drawable/round"
        android:backgroundTint="@color/purple_500"

        android:layout_height="wrap_content"
        android:id="@+id/setup_password_btn" />
</LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#04293A"
        android:id="@+id/nav"
        app:subheaderColor="#4FBDBA"
        app:itemIconTint="#4FBDBA"
        app:itemTextColor="#35858B"
        app:headerLayout="@layout/navigator"
        app:menu="@menu/drawer"
        android:layout_gravity="start"/>
</androidx.drawerlayout.widget.DrawerLayout>
