<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_bill_customer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"

    android:background="#343434"
    tools:context=".Invoice.NewBillCustomerActivity"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="50dp"
        android:text="@string/customer_name_label"
        android:layout_width="wrap_content"
        android:textColor="#969696"
        android:textSize="20dp"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/customer_name_value"
        android:layout_marginBottom="10dp"
        android:textColor="#F5EDDC"
        android:layout_marginTop="5dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/phone_number_label"
        android:textColor="#969696"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/phone_number_value"
        android:layout_marginBottom="10dp"
        android:inputType="number"
        android:textColor="#F5EDDC"
android:layout_marginTop="5dp"
        android:maxLength="10"
        android:hint="10-digit phone number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="20dp"
        android:onClick="addCustomer"
        android:text="@string/add_customer_next_label"
        android:background="@drawable/round"
        android:backgroundTint="@color/purple_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
