<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".EmiCalculator.EmiCal">

   <androidx.coordinatorlayout.widget.CoordinatorLayout
       android:layout_width="match_parent"
        android:background="@color/white"
       android:layout_height="match_parent">
       <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
           android:background="@color/tool"
           app:titleTextColor="@color/black"
           app:title="EMI Calculator"
            android:elevation="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_principal"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/principal"
                    android:layout_width="match_parent"
                    android:background="@drawable/round"
                    android:layout_height="30dp"
                    android:backgroundTint="@color/edit"
                    android:textColor="@color/black"
                    android:textSize="20dp"

                    android:digits="0123456789."
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/hint_principal"
                    android:inputType="number"
                    android:singleLine="true"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_interest"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/interest"
                    android:layout_width="match_parent"
                    android:background="@drawable/round"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"

                    android:backgroundTint="@color/edit"

                    android:layout_height="30dp"
                    android:digits="0123456789."
                    android:hint="@string/hint_interest"
                    android:inputType="number"
                    android:singleLine="true"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/input_layout_tenure"
                android:layout_marginTop="20dp"
                android:background="@color/white"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/years"
                    android:layout_width="match_parent"
                    android:background="@drawable/round"
                    android:layout_height="30dp"
                    android:digits="0123456789."
                    android:backgroundTint="@color/edit"
                    android:textColor="@color/black"

                    android:hint="@string/hint_years"
                    android:inputType="number"
                    android:layout_gravity="center"
                    android:gravity="center"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_calculate2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/round"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white"
                android:text="Calculate"
                tools:ignore="HardcodedText" />


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/input_layout_emi"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <EditText
                    android:id="@+id/emi"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:background="@drawable/round"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/edit"

                    android:gravity="center"
                    android:hint="@string/hint_emi"
                    android:inputType="number"
                    android:maxEms="0"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/input_layout_total_Interest"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/interest_total"
                    android:layout_width="match_parent"
                    android:background="@drawable/round"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:backgroundTint="@color/edit"
                    android:textColor="@color/black"

                    android:layout_height="30dp"
                    android:hint="@string/hint_interest_total"
                    android:inputType="number"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
   </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav"
        app:subheaderColor="#4FBDBA"
        app:itemIconTint="#4FBDBA"
        app:itemTextColor="#35858B"
        android:background="@color/white"

        app:headerLayout="@layout/navigator"
        app:menu="@menu/drawer"
        android:layout_gravity="start"/>

</androidx.drawerlayout.widget.DrawerLayout>

